# gitnapped

./: .gitignore  CNAME  Cargo.toml  README.md  _config.yml
.github/: FUNDING.yml
.github/workflows/: homebrew.yml  main.yml  release.yml
src/: analyzer.rs  config.rs  display.rs  main.rs  models.rs  parser.rs  utils.rs
